@@ -23,7 +23,7 @@ unset archives archive_dirs builddir cc cflags check config cxx cxxflags deps
 unset dependencies directory failures homepage install_as_root install_log_rc
 unset lc_all ldflags leavefiles linguas logdir logfile log_install log_target
 unset name name_ver optimize package package_builddir patches patch_cmds profile
-unset profiles_cwd srcdir stage terminal_output timestamp version
+unset srcdir stage terminal_output timestamp version
 unset ${!stage0*} ${!stage1*}
 
 # Location of configuration file.  Scripts may redefine this value in response
