@@ -90,7 +90,6 @@ if (( ${#package_list[@]} > 1 )); then
 fi
 
 # There is only one package to build.  Do so in this instance.
-profiles_cwd=yes
 open_package "${package_list[0]}"
 
 # If we have build commands, run them in the package's source directory.
