@@ -255,7 +255,6 @@ if (( ${#package_list[@]} > 1 )); then
 fi
 
 # There is only one package to install.  Do so in this instance.
-profiles_cwd=yes
 open_package "${package_list[0]}"
 
 # Check we know how to install package.
