@@ -143,7 +143,6 @@ if (( ${#package_list[@]} > 1 )); then
 fi
 
 # There is only one package to unpack.  Do so in this instance.
-profiles_cwd=yes
 open_package "${package_list[0]}"
 
 unpack_archives &&
